--- a/front/src/index.scss
+++ b/front/src/index.scss
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+    box-sizing: border-box;
 }
 
 body,
@@ -63,7 +64,6 @@ html {
 
 
     // Default elements animations
-
     @keyframes fadein {
         0%{
             transform: scale(0.1);
