--- a/front/src/components/footer/footer.scss
+++ b/front/src/components/footer/footer.scss
@@ -1,7 +1,7 @@
 
 footer{
-    position: fixed;
-    bottom:0;
+    // position: absolute;
+    // bottom:0;
     padding: 30px 0 10px;
     border:1px solid #efe8ed;
     width:100%;
@@ -10,12 +10,11 @@ footer{
     background: #f5f5f5;
     margin:0;
     padding:0;
+    max-width: 1200px;
 
     div{
         margin:20px;
     }
-
- 
 
     ul{
         li{
