--- a/front/src/containers/dashboard/dashboard.scss
+++ b/front/src/containers/dashboard/dashboard.scss
@@ -1,123 +1,120 @@
-.main-events {
-    // Set events, resources, and tips layout the same
+.dashboard{
+
     .events,
     .resources,
     .tips {
-        width: inherit;
         width: 100%;
         margin-bottom: 90px;
     }
 
+        
+        .events > div:first-child,
+        .resources > div:first-child,
+        .tips:first-child {
+            width: 500px;
+            padding: 15px;
+        } // Top 5 events secion
 
-    .events>div:first-child,
-    .resources>div:first-child,
-    .tips:first-child {
-        width: 500px;
-        padding: 15px;
-    } // Top 5 events secion
-    .top_event {
-        &>div {
-            width: 320px;
-            background: #fff;
-            margin: 20px;
-            padding: 10px;
-            border: 1px solid #efe8ed;
-            border-radius: 4px;
-            cursor: pointer;
-            animation: fadein 500ms ease-in-out;
-            img {
-                width: 100%;
-            }
+        .events{
+            // border:1px solid orange;
+            text-align: center;
+            padding: 30px;
         }
-    } // Resources layout of the page
-    .resources {
-        .interview_tip {
+        .top_event {
+            & > div {
+                width: 320px;
+                background: #fff;
+                margin: 20px;
+                padding: 10px;
+                border: 1px solid #efe8ed;
+                border-radius: 4px;
+                cursor: pointer;
+                animation: fadein 500ms ease-in-out;
+                img {
+                    width: 100%;
+                }
+            }
+        } // Resources layout of the page
+        .resources {
+            // border: 4px solid blue;
+            text-align: center;
+            padding: 30px;
+            background: #6F9FD8;
 
             p{
-                position: absolute;
-                bottom: 0;
-                width: 100%;
-                text-align: center;
-                background: rgba(3, 0, 0, 0.45);
-                padding: 10px;
-                color: #fff;
-                font-size: 16px;
-                letter-spacing: 5px;
-            }
-
-            div{
-                position: relative;
+                color:#fff;
             }
             
-            & div:first-child {
-                width: 50%;
-                height: 250px;
-                background: #fff;
-                margin: 20px;
-                border: 1px solid #efe8ed;
-                background-image: url("../../images/tips-helloquence.jpg");
-                background-size: cover;
-                background-repeat: no-repeat;
-                background-position: 100%;;
-                
+            
+            .interview_tip {
+                display: flex;
+                justify-content: space-between;
+
+                p{
+                    position: absolute;
+                    bottom: 0;
+                    width: 100%;
+                    text-align: center;
+                    background: rgba(3, 0, 0, 0.45);
+                    padding: 10px;
+                    color: #fff;
+                    font-size: 16px;
+                    letter-spacing: 5px;
+                }
+
+                div{
+                    position: relative;
+                    width: 50%;
+                    margin:10px;
+                    background: #fff;
+                    height: 350px;
+                    border: 1px solid #efe8ed;
+                    background-image: url("http://via.placeholder.com/350x150");
+                    background-size: cover;
+                    background-repeat: no-repeat;
+                    background-position: 100%;
+                }
             }
-            & div:last-child {
-                width: 40%;
-                border: 1px solid #efe8ed;
-                height: 250px;
-                background: #fff;
-                margin: 20px;
-                background-image: url("../../images/hackathon-alex-kotliarskyi.jpg");
-                background-size: cover;
-                background-repeat: no-repeat;
-                background-position: 100%;;
+        } // Tips about interview section
+        .tips {
+            // border: 5px solid purple;
+            text-align: center;
+            padding: 20px;
+
+
+            .top_tip {
+                display: flex;
+                justify-content: center;
+
+                p{
+                    position: absolute;
+                    bottom:0;
+                    text-align: center;
+                    background: rgba(3, 0, 0, 0.45);
+                    padding: 10px;
+                    color: #fff;
+                    font-size: 16px;
+                    letter-spacing: 5px;
+                    width: 100%;
+                }
+
+                div {
+                    position: relative;
+                    width: 23%;
+                    height: 150px;
+                    border: 1px solid #efe8ed;
+                    background: #fff;
+                    margin: 20px;
+                    background-size: cover;
+                    background-position: 100%;
+                    background-image: url("http://via.placeholder.com/350x150");
+                    background-repeat: no-repeat;
+                }
             }
         }
-    } // Tips about interview section
-    .tips {
-        .top_tip {
 
-            p{
-                position: absolute;
-                bottom:0;
-                text-align: center;
-                background: rgba(3, 0, 0, 0.45);
-                padding: 10px;
-                color: #fff;
-                font-size: 16px;
-                letter-spacing: 5px;
-                width: 100%;
-            }
-
-            div {
-                position: relative;
-                width: 25%;
-                height: 250px;
-                border: 1px solid #efe8ed;
-                background: #fff;
-                margin: 20px;
-                background-size: cover;
-                background-position: 100%;
-                background-image: url("../../images/connections.benjamin-zanatta.jpg");
-                background-repeat: no-repeat;
-            }
-
-            &>div:first-child{
-                background-size: cover;
-                background-image: url("../../images/portfolio-water-journal.jpg");
-            }
-
-            &>div:last-child{
-                background-size: cover;
-                background-image: url("../../images/john-schnobrich-520023.jpg");
-            }
-
-            
-
-            
-        }
-    }
 }
+
 
 @media (max-width:414px) {
     .main-events {
