--- a/frontend/src/common/hasJoin.scss
+++ b/frontend/src/common/hasJoin.scss
@@ -1,47 +1,59 @@
-.main{
-    padding: 100px;
-}
+@import "../base/_variables.scss";
+
 
 
 
 .credentials {
-    margin: 0 auto;
-    padding: 20px;
-    max-width:360px;
-    border-radius: 4px;
-    position: relative;
-    border: 1px solid #e1d9d9;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    background: #fff;
-    box-shadow: 25px 45px 45px #555;
-    
+    background: $primary-color-dark;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+
+    p {
+        text-align: center;
+    }
+
     .credentials_btn {
         margin: 0 auto;
         margin-bottom: 3em;
-
-        button {
-            color: #555;
-            padding: 7px;
-            border-radius: 4px;
-            border: 1px solid #efe8ed;
-            margin-left: 30px;
-            width: 90px;
-            outline: none;
-            cursor: pointer;
-        }
-        .active {
-            background: #999999;
-            color: #fff;
-        }
-        p {
-            text-align: center;
-        }
     }
 
-    section{
-        display: block;
+    .credentials_btn button {
+        color: #555;
+        padding: 7px;
+        border-radius: 4px;
+        border: 1px solid #efe8ed;
+        margin-left: 30px;
+        width: 90px;
+        outline: none;
+        cursor: pointer;
+    }
+
+    .credentials_btn .active {
+        background: $primary-color-dark;
+        color: #fff;
+    }
+
+    .btn {
+        background: $secondary-text-color;
+    }
+
+    
+
+    section {
+        // display: block;
+        margin: 100px auto;
+        padding: 20px;
+        max-width:360px;
+        border-radius: 4px;
+        position: relative;
+        border: 1px solid #e1d9d9;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        background: #fff;
+        box-shadow: 5px 5px 35px $primary-text-color;
+
 
         .ui.form {
             display: flex;
@@ -59,12 +71,8 @@
                 margin-bottom: .9em;
             }
         }
-
-
-        a, p{
-            text-align: center;
-        }
     }
+
 
     @keyframes form {
         0% {
