--- a/frontend/src/components/footer/footer.scss
+++ b/frontend/src/components/footer/footer.scss
@@ -1,3 +1,4 @@
+@import "../../base/_variables.scss";
 
 footer {
     // position: absolute;
@@ -6,11 +7,10 @@ footer {
     border:1px solid #efe8ed;
     width:100%;
     border-radius: 4px;
-    z-index: 999;
-    background: #f5f5f5;
+    position: absolute;
+    background: $divider-color;
     margin:0;
     padding:0;
-    max-width: 1200px;
 
     div{
         margin:20px;
