--- a/frontend/src/components/header/header.scss
+++ b/frontend/src/components/header/header.scss
@@ -1,24 +1,38 @@
+@import "../../base/_global.scss";
+
 header {
     padding: 20px;
     border: 1px solid #efe8ed;
     position: fixed;
-    width: 100%;
+    background: $primary-color-dark;
     top: 0;
+    z-index: 2;
     width: 100%;
+
+    div {
+        @extend %bg-image;
+        background-image: url("../../images/logo.png");
+        border-radius: 50%;
+        width: 70px;
+        height: 70px;
+    }
     
     h1 {
         color: #555;
     }
+
     ul {
         margin-right: 30px;
-        li {
-            margin-left: 20px;
-            color: #555;
-            list-style: none;
-            cursor: pointer;
-            font-size: 16px;
-        }
     }
+
+    ul li {
+        margin-left: 20px;
+        color: #555;
+        list-style: none;
+        cursor: pointer;
+        font-size: 16px;
+    }
+
     a {
         text-decoration: none;
         color: #555;
