fix: layout of integrations

--- a/frontend/src/components/header/header.scss
+++ b/frontend/src/components/header/header.scss
@@ -9,6 +9,11 @@ header {
     z-index: 2;
     width: 100%;
 
+    section {
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+
     div {
         @extend %bg-image;
         background-image: url("../../images/logo.png");
