--- a/frontend/src/containers/events/event.scss
+++ b/frontend/src/containers/events/event.scss
@@ -1,23 +1,30 @@
 .search_events {
-    &>div:first-child {
+    margin: 130px auto;
+    max-width: 1200px;;
+
+    .sidebar {
         width: 15%;
         position: fixed;
         display: block;
         height: 73vh;
-        ul {
-            position: relative;
-            top: 5em;
-            li {
-                margin: 15px;
-                padding: 11px;
-                cursor: pointer;
-            }
+        
+    }
+
+    .sidebar ul {
+        position: relative;
+        top: 5em;
+
+        li {
+            margin: 15px;
+            padding: 11px;
+            cursor: pointer;
         }
     }
 
 
+
     
-    &>div:last-child {
+    & > .event-content {
         width: 85%;
         border-left: 1px solid #efe8ed;
         background: #f1f3f5;
@@ -34,7 +41,7 @@
     }
 
 
-    &>#notFound{
+    & > #notFound{
         background: #fff;
         height: 100vh;
 
@@ -64,19 +71,19 @@
             width: 100%;
         }
 
-        .icons{
+        .icons {
             position: absolute;
             bottom: 20px;
-            right:15px;
+            right: 15px;
             font-size: 18px;
             opacity: 0;
 
-            .saved{
+            .saved {
                 color: #0938f5;
                 opacity: 1;
             }
             
-            i{
+            i {
                 margin-left: 10px;
                 cursor: pointer;
                 color:#555;
@@ -103,10 +110,10 @@
 
 @media (max-width:414px) {
     .search_events {
-        &>div:first-child {
+        & > div:first-child {
             width: 27%;
         }
-        &>div:last-child {
+        & > div:last-child {
             width: 73%;
             border-left: 1px solid #efe8ed;
             background: #f1f3f5;
