--- a/frontend/src/containers/profile/profile.scss
+++ b/frontend/src/containers/profile/profile.scss
@@ -1,83 +1,98 @@
+@import "../../base/_global.scss";
+
 .profile {
-    &>div:first-child {
+    margin: 130px auto;
+    max-width: 1200px;
+
+    .profile-sidebar {
         width: 15%;
         position: fixed;
         height: 400px;
         border-right: 1px solid #efe8ed;
+
         ul {
             margin-top: 30px;
-            .current {
-                width: 92%;
-                margin: 0;
-                border-right-color: #fff;
-                background: #f1f3f5;
-                transition: background 500ms ease-in-out;
-            }
-            &>li {
-                line-height: 30px;
-                padding: 9px;
-                cursor: pointer;
-            }
+        }
+
+        ul .current {
+            width: 92%;
+            margin: 0;
+            border-right-color: #fff;
+            background: #f1f3f5;
+            transition: background 500ms ease-in-out;
+        }
+
+        ul li {
+            line-height: 30px;
+            padding: 9px;
+            cursor: pointer;
         }
     }
-    &>div:last-child {
+
+
+    .profile-content {
         width: 100%;
         height: 100%;
         margin-left: 15%;
         padding: 10px;
-        .info {
-            .div {
-                margin: 20px;
-                width: 10%;
-                height: 20px;
+
+        .info .div {
+            margin: 20px;
+            width: 10%;
+            height: 20px;
+            padding: 10px;
+            text-align: center;
+            cursor: pointer;
+        }
+
+        .main_info div {
+            margin: 20px;
+        }
+        .main_info .form-group {
+            width: 45%;
+        }
+
+
+        .integrations div {
+            width: 80%;
+            margin-bottom: 30px;
+            border: 1px solid $divider-color;
+            padding: 20px;
+            border-radius: 4px;
+
+            & p:last-child {
+                border: 1px solid #efe8ed;
                 padding: 10px;
-                text-align: center;
+                border-radius: 3px;
                 cursor: pointer;
-            }
-            
-        }
-        .main_info {
-            div {
-                margin: 20px;
-            }
-            .form-group {
-                width: 45%;
+                width: 170px;
+                text-align: center;
             }
 
-        }
-        .integrations {
-            div {
-                width: 40%;
-                margin-bottom: 50px;
-                & p:last-child {
-                    border: 1px solid #efe8ed;
-                    padding: 10px;
-                    border-radius: 3px;
-                    cursor: pointer;
-                    width: 140px;
-                    text-align: center;
-                }
-
-                .integrated{
-                    background: #62b3c8;
-                    color:#fff;
-                }
+            .integrated {
+                background: $primary-color-dark;
+                color:#fff;
             }
         }
+
         .settings div {
             width: 45%;
+        }
+
+        .profile-credentials {
+            margin-left: 50px;
         }
     }
 }
 
 
 @media (max-width:414px) {
-    .profile{
+    .profile {
 
-        &>div:first-child {
+        & > div:first-child {
             width: 25%;
 
-            ul{
+            ul {
                 .current {
                     width: 85%;
                     
@@ -85,34 +100,34 @@
             }
         }
 
-        &>div:last-child {
+        & > div:last-child {
             width: 80%;
             height: 100%;
             margin-left: 25%;
-            .integrations{
+            .integrations {
                 flex-direction: column;
 
-                div{
+                div {
                     width:95%;
                 }
             }
 
-            .settings{
-                div{
+            .settings {
+                div {
                     width:85%;
                 }
             }
 
-            .main_info{
+            .main_info {
 
-                .form-group{
+                .form-group {
                     width:85%;
                 }
             }
 
-            .credentials{
+            .credentials {
 
-                form{
+                form {
                     width:95%;
                 }
             }
