--- a/frontend/src/containers/resetpassword/resetpassword.scss
+++ b/frontend/src/containers/resetpassword/resetpassword.scss
@@ -1,8 +1,16 @@
+@import "../../base/_global.scss";
 
 
+.password {
+    background: $primary-color-dark;
+    height: 100vh;
+    width: 100%;
+}
 .resetpassword{
-    margin-top: 5em;
-
+    background: #fff;
+    width:360px;
+    padding: 20px;
+    border-radius: 4px;
     form{
 
         div{
