feature/mockup sign up flow

--- a/frontend/src/containers/profile/profile.scss
+++ b/frontend/src/containers/profile/profile.scss
@@ -48,8 +48,8 @@
         .main_info div {
             margin: 20px;
         }
-        .main_info .form-group {
-            width: 45%;
+        .main_info form {
+            width: 90%;
         }
 
 
@@ -75,8 +75,8 @@
             }
         }
 
-        .settings div {
-            width: 45%;
+        .settings form {
+            width: 90%;
         }
 
         .profile-credentials {
