--- a/frontend/src/containers/signin/signin.scss
+++ b/frontend/src/containers/signin/signin.scss
@@ -1,12 +1,63 @@
-
+@import "../../base/_variables.scss";
+@import "../../base/_mixins.scss";
 
 .login {
-    width: 100%;
     max-width: 100%;
+    width: 100%;
+    height: 100vh;
+    background: $primary-color-dark;
+    @include center;
 
     .signin-container {
-        width: 360px;
+        width: 100%;
         max-width: 360px;
-        margin: 100px auto;
+        margin: 0 auto;
+        background: #fff;
+        padding: 20px;
+        border-radius: 4px;
+    }
+
+    p {
+        text-align: center;
+    }
+
+    .credentials_btn {
+        width: 100%;
+        margin: 0 auto;
+        margin-bottom: 3em;
+        @include center;
+    }
+
+    .credentials_btn button {
+        color: #555;
+        padding: 7px;
+        border-radius: 4px;
+        border: 1px solid #efe8ed;
+        margin-left: 30px;
+        width: 90px;
+        outline: none;
+        cursor: pointer;
+    }
+
+    .credentials_btn .active {
+        background: $primary-color-dark;
+        color: #fff;
+    }
+
+    .btn {
+        background: $secondary-text-color;
+    }
+
+    .ui.form {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        div {
+            width: 100%;
+        }
+        button {
+            margin-bottom: .9em;
+        }
     }
 }
